--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,7 +9,7 @@ spring:
 
 mybatis:
   mapper-locations: classpath:/mappers/*.xml #指定XML文件的位置
-  type-aliases-package: cn.edu.hdu.pojo
+  type-aliases-package: Tmp.pojo
   configuration:
     map-underscore-to-camel-case: true
     auto-mapping-behavior: full
