--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+src/main/resources/application.yaml
+
 ### IntelliJ IDEA ###
 .idea/
 .idea/modules.xml
